[package]
name = "play_doublerandom"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "double_random"
harness = false
